fix(list-item): correct gap

--- a/src/app/project/list/list-item/list-item.component.scss
+++ b/src/app/project/list/list-item/list-item.component.scss
@@ -4,8 +4,9 @@
   flex-wrap: wrap;
   width: 640px;
 
-  .list-item-indentation {
-    margin-left: 40px;
+  .expand-close-container {
+    width: 40px;
+    height: 40px;
   }
 }
 
